--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,6 +36,7 @@ dependencies {
     //Unit testing
     testCompile 'junit:junit:4.12'
     testCompile 'org.mockito:mockito-core:2.0.111-beta'
+    testCompile 'org.hamcrest:hamcrest-library:1.3'
 
 
     //Dependencies
