Adds the possibility of uploading the artifact to the repo

--- a/build.gradle
+++ b/build.gradle
@@ -15,6 +15,7 @@ buildscript {
 allprojects {
     repositories {
         jcenter()
+        maven { url "https://raw.github.com/synergian/wagon-git/releases" }
     }
 }
 
